Project1VS/force-app/main/default/objects/Character__c/fields/Character_Name__c.field-meta.xml
<CustomField>
    <fullName>Character_Name__c</fullName>
    <label>Character Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>