Project1VS/force-app/main/default/objects/Character__c/fields/Dead__c.field-meta.xml
<CustomField>
    <fullName>Dead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dead?</label>
    <type>Checkbox</type>
</CustomField>