Project1VS/force-app/main/default/objects/Character__c/fields/In_Party__c.field-meta.xml
<CustomField>
    <fullName>In_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>In Party</label>
    <referenceTo>Party__c</referenceTo>
    <relationshipLabel>Characters</relationshipLabel>
    <relationshipName>Characters</relationshipName>
    <type>Lookup</type>
</CustomField>