Project1VS/force-app/main/default/objects/Character__c/fields/Used_By__c.field-meta.xml
<CustomField>
    <fullName>Used_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Used By</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>D&amp;DU - Player</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Characters</relationshipName>
    <type>Lookup</type>
</CustomField>